may be a auto_html bug or may be a problem with postgres

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -103,7 +103,7 @@
 						<% end %>
 					</div>
 					<a class="left carousel-control" href="#events-carousel" data-slide="prev">‹</a>
-					<a class="right carousel-control" href="#events-carousel" data-slide="next">›</a>
+					<a class="right carousel-control" href="#events-carousel" data-slide="next" id="next-event">›</a>
 				</div>
 				<hr>
 			</section>
@@ -191,58 +191,8 @@
 				<hr>
 			</section>
 
-			<!-- <section id="promoter-apply">
-				<div class="well well-large">
-					<header><h3 class="lead">So Who Organizes the Show?</h3></header>
-					<div class="row-fluid">
-						<div class="span2">
-							<p>
-								<img src="//www.gravatar.com/avatar/fd4e9587dd4e9696fecfa8b47f5d6c77.png" class="img-circle">
-							</p>
-							<ul class="nav nav-list">
-			          <li class="nav-header">How it Works</li>
-			          <li class="divider"></li>
-			          <li><%= link_to "Organizing", info_path(anchor: "organizing") %></li>
-			          <li><%= link_to "Artists", info_path(anchor: "artist") %></li>
-			          <li><%= link_to "Funding", info_path(anchor: "funding") %></li>
-			          <li><%= link_to "Requests", info_path(anchor: "requests") %></li>
-			          <li><%= link_to "Attending", info_path(anchor: "attending") %></li>
-			          <li><%= link_to "Fees and Charges", info_path(anchor: "money") %></li>
-			          <li class="divider"></li>
-
-			        </ul>
-			        <div class="btn-group center">
-								<a href="#invite" class="btn btn-block btn-large btn-primary" data-toggle="modal">Request Invite</a>
-							</div>
-						</div>
-						<div class="span10">
-							<blockquote>
-								<p><strong>Anyone...excepting Artists.</strong> </p>
-								<br>
-								<p>Artists can do three things on 100 Motels: Add a playlist of their music; make a tour request; make a support request. If they end up playing a show, everything bar the performance will be taken care of by the organizer. It's just like the pro's, except you don't have to make commercial music to play.<strong> You will never pay to play.</strong></p> <br>
-							  <p>Anyone who has a credit card can organize, but it will be controlled until the service matures. The first organizers will be radio hosts, bloggers and other proven contributers to music without profit who naturally command a crowd. Check out the organizers in this demo, all people who I discovered through my music.</p> <br>
-								<p>Along with offloading the organizational burden from the artist there were two other pillar issues that precipitated the idea for 100 Motels: Risk and Attendance. You can fund a 100 Motels show without incurring any costs until you're happy with the attendance. There's no time-frame outside of what you decide yourself - dates and prices can be altered without penalty. </p> <br>
-							</blockquote>
-							<p class="pull-right"><a href="#">back to top</a></p>
-						</div>
-						<hr>
-					</div>
-				</div>
-			</section> -->
 		</div>
 		<!-- MODAL FOR ORGANIZER -->
-		<div class="modal hide fade" id="invite" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-        <h3>100 Motels Promoter Invites</h3>
-      </div>
-      <div class="modal-body">
-        <p>Thanks for your interest. Right now I'm testing amongst people I know, so if you've stumbled onto this site somehow this is really only a demo, 100 Motels is not open for business yet. If you want to contact me about getting involved message me on twitter, facebook, github or whatever you use, <a href="//seocahill.com">Seo.</a></p>
-      </div>
-      <div class="modal-footer">
-        <a href="#" class="btn" data-dismiss="modal">Close</a>
-      </div>
-    </div>
 </div> <!-- /main container -->
 
 
