fixed sharing title!

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<header>
-		<% title(@event.artist, "Events") %>
+		<% title(@event.artist, @event.venue, @event.date) %>
 	</header>
 	<div class="row">
 		<div class="span3">
