--- a/app/views/notifier/_ticket_email.html.erb
+++ b/app/views/notifier/_ticket_email.html.erb
@@ -2,7 +2,7 @@
 	<tr>
 		<td class="head-text" width="100%" valign="top">
 			<h3>
-				<%= @greeting %> We appreciate you :)
+				<%= @greeting %> Enjoy the Show :)
 			</h3>
 		</td>
 	</tr>
@@ -20,7 +20,7 @@
 			</td>
 		</tr>
 	</table>
-	<!-- <table width="600px" cellpadding="0" cellspacing="0" border="0" align="center">
+	<table width="600px" cellpadding="0" cellspacing="0" border="0" align="center">
 		<tr>
 			<td width="200px" valign="top">
 				<%= raw(@qr) %>
@@ -50,24 +50,15 @@
 				</div>
 			</td>
 		</tr>
-	</table> -->
+	</table>
 	<table width="600px" cellpadding="0" cellspacing="0" border="0" align="center">
 		<tr>
 			<td class="head-text" width="100%" valign="top">
 				<div class="page-header">
 					<h5>
-						<em>Your tickets will be issued after your card has been charged.</em>
+						<small>Present the QR code for addmission and/or readmission subject to the promoter's T&C</small> <br>
 					</h5>
 				</div>
 			</td>
 		</tr>
 	</table>
-	<table width="600px" cellpadding="0" cellspacing="0" border="0" align="center">
-		<tr>
-			<td width="600px" valign="top">
-				<h3>Your Order from 100 Motels</h3>
-				<%= render 'orders/order' %>
-			</td>
-		</tr>
-	</table>
-</table>
