--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -53,119 +53,9 @@
   </section>
 
   <section id="promoter-stats" class="section-box">
-    <div class="label-box">Promoter Stats</div>
-      <div class="row">
-        <div class="span4">
-          <fieldset>
-            <legend align="center">General Info</legend>
-            <dl class="dl-horizontal">
-              <dt>Joined: </dt>
-              <dd><%= time_ago_in_words(@user.confirmed_at) %> ago</dd>
-              <dt>Availability: </dt>
-              <dd id="available" data-mercury="full"><%= @profile.available %></dd>
-              <dt>Fee: </dt>
-              <dd id="fee" data-mercury="full"><%= @profile.fee %></dd>
-            </dl>
-          </fieldset>
-        </div>
-        <div class="span4">
-          <fieldset>
-            <legend align="center">Event History</legend>
-          <dl class="dl-horizontal">
-            <dt>Total: </dt>
-            <dd><%= @profile.events.count || 0 %></dd>
-            <dt>Successful: </dt>
-            <dd> 0 </dd>
-            <dt>Upcoming: </dt>
-            <dd><%= @profile.events.count || 0 %></dd>
-          </dl>
-          </fieldset>
-        </div>
-        <div class="span3">
-          <fieldset>
-            <legend align="center">Event Average</legend>
-          <dl class="dl-horizontal">
-            <dt>Funding: </dt>
-            <dd> n/a </dd>
-            <dt>Attendance: </dt>
-            <dd> n/a </dd>
-            <dt>Ticket Price: </dt>
-            <dd> n/a </dd>
-          </dl>
-          </fieldset>
-        </div>
-      </div>
-  </section>
-
-  <section id="tour-info" class="section-box">
-    <div class="row">
-      <div class="label-box">Tour Info</div>
-      <div class="span5">
-        <div class="tabbable tabs-below">
-          <ul class="nav nav-tabs">
-            <li class="active"><a href="#about" data-toggle="tab">About Me</a></li>
-            <li><a href="#equipment" data-toggle="tab">Equipment</a></li>
-            <li><a href="#venues" data-toggle="tab">Venues</a></li>
-            <li><a href="#travel" data-toggle="tab">Getting here</a></li>
-            <li><a href="#accomodation" data-toggle="tab">Accommodation</a></li>
-            <li><a href="#history" data-toggle="tab">Current & Past Shows</a></li>
-          </ul>
-        </div>
-        <div class="tab-content">
-          <div class="tab-pane active tour-content" id="about">
-            <% if @profile.about? %>
-              <%= raw @profile.about %>
-            <% else %>
-              <p>This is where you can talk about your music life! I'm assuming most of the Organizers will have a background in music appreciation, but of course a lot of appreciaters are musicians also.</p>
-
-              <p>I really hope that all the seekers of good music will start organizing shows. There are more independent radio shows, podcasts and blogs than ever and that's really great but the follow on needs to be a live show - musicians need to perform.</p>
-
-              <p>So tell artists if it isn't obvious already where they can go to watch, listen or read about you. You can read my blog for instance at <a href="//seocahill.com">seocahill.com</a>, listen to seocahill's playlists at Grooveshark or google my band, Crete Boom. </p>
-
-              <p> In the media section opposite maybe stick in a slideshow or video of the venue/s you're using, or of past events. </p>
-
-              <p>Ultimately this section is for everything and anything you think might interest an artist that doesn't fit into the other sections.
-              </p>
-              <p lead><%= @user.name %></p>
-            <% end %>
-          </div>
-          <div class="tab-pane" id="equipment">
-            <% if @profile.equipment? %>
-              <%= raw @profile.equipment %>
-            <% else %>
-              <p>What sort of bands do you cater for? Can you hand large ensembles with specific needs equipment wise? If so will this cost, do you borrow, how do you source music gear?</p>
-              <p>A lot of bands for smaller shows will be traveling with light, instruments only. They may also tailor the size of the touring band based on what the promoter can offer.</p>
-            <% end %>
-          </div>
-          <div class="tab-pane" id="venues">
-            <% if @profile.venues? %>
-              <%= raw @profile.venues %>
-            <% else %>
-              <p>Tell us about the venue/ venues you use. Have you played them yourself? Do they book late shows? What are they, your house, a barn, a club? If links exist then link them and don't forget to puts pics and/or video in the media section opposite</p>
-              <p>There's also the technical side of it, backlines, sound, engineers, whatever you think is relevant.</p>
-              <p>If you're using a music club we expect them to pay you based on ticket sales and likely bar takings. We also expect them to allow some kind of rider for the artist, whatever way they want to work it.</p>
-            <% end %>
-          </div>
-          <div class="tab-pane" id="travel">
-            <% if @profile.travel? %>
-              <%= raw @profile.travel %>
-            <% else %>
-              <p>General advice about airports and ground transport would be a great help, especially when trying to work out a budget for the show.</p>
-              <p>Which airlines to use, is there a cheap time to come to your city, general tips and hints about hauling gear or not? You probably know these things from experience.</p>
-              <p>Another important consideration for international artists is the visa / immigration situation. In many countries, musicians are officially or unofficially excepted from normal work restrictions but that may not be the case in your country.</p>
-            <% end %>
-          </div>
-          <div class="tab-pane" id="accomodation">
-            <% if @profile.accomodation? %>
-              <%= raw @profile.accomodation %>
-            <% else %>
-              <p>Try to aim slightly higher than couchsurf but as long as you offer some kind of definite accommodation or to organize it than good enough. Couches, hostels or hotels, free or priced into the show, as long as the artists are looked after.</p>
-              <p> Leaving bands roofless after a show or any other music industry type behaviour will not be tolerated!</p>
-            <% end %>
-          </div>
-          <div class="tab-pane" id="history">
-            <p>Artists will like to check out your activity stream if for no other reason to see if the dates they are looking at are available</p>
-            <table class="table table-striped">
+    <div class="label-box">Organizer's Events</div>
+      <div class="row-fluid">
+        <table class="table table-striped">
               <thead>
                 <tr>
                   <th>Artist</th>
@@ -185,11 +75,31 @@
                 <% end %>
               </tbody>
             </table>
-          </div>
-        </div>
       </div>
-      <div class="span6" id="promoter-media">
-        <div id="placeholder"></div>
+  </section>
+
+  <section id="tour-info" class="section-box">
+    <div class="row-fluid">
+      <div class="label-box">Organizer Info</div>
+      <div class="span5">
+          <% if @profile.about? %>
+            <%= raw @profile.about %>
+          <% else %>
+            <p>This is where you can talk about your music life! I'm assuming most of the Organizers will have a background in music appreciation, but of course a lot of appreciaters are musicians also.</p>
+
+            <p>I really hope that all the seekers of good music will start organizing shows. There are more independent radio shows, podcasts and blogs than ever and that's really great but the follow on needs to be a live show - musicians need to perform.</p>
+
+            <p>So tell artists if it isn't obvious already where they can go to watch, listen or read about you. You can read my blog for instance at <a href="//seocahill.com">seocahill.com</a>, listen to seocahill's playlists at Grooveshark or google my band, Crete Boom. </p>
+
+            <p> In the media section opposite maybe stick in a slideshow or video of the venue/s you're using, or of past events. </p>
+
+            <p>Ultimately this section is for everything and anything you think might interest an artist that doesn't fit into the other sections.
+            </p>
+            <p lead><%= @user.name %></p>
+          <% end %>
+      </div>
+      <div class="span6" >
+        <!-- <div id="placeholder"></div> -->
         <% if @profile.promoter_media? %>
           <%= @profile.promoter_media_html %>
         <% else %>
