--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -16,17 +16,17 @@
         <div class="">
           <%= select_tag "promoter_city", options_for_select(@options), prompt: "Filter by City"  %>
           <br>
-          <h4>Sort your results</h4> <br>
+          <!-- <h4>Sort your results</h4> <br> -->
           <ul class="nav nav-list">
-            <li class="nav-header">Event Average</li>
+            <!-- <li class="nav-header">Event Average</li>
             <li class=""><a href="">Sales</a></li>
             <li class=""><a href="">Attendence</a></li>
             <li class="divider"></li>
             <li class="nav-header">Experience</li>
             <li class=""><a href="">Total Events</a></li>
-            <li class=""><a href="">Successful</a></li>
+            <li class=""><a href="">Successful</a></li> -->
             <li class="divider"></li>
-            <button class="btn btn-block" value="Reset Form">Clear Filters</button>
+            <button class="btn btn-block" value="Reset Form">Clear Filter</button>
             <li class="divider"></li>
           </ul>
         </div>
