--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -75,6 +75,7 @@
                 <% end %>
               </tbody>
             </table>
+            <%= will_paginate @events %>
       </div>
   </section>
 
