Changed Promoter to Organizer

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -27,7 +27,7 @@
         <div class="page-header">
           <h2>
             <div id="name">
-              <%= @profile.promoter_name || "Promoter Name" %>
+              <%= @profile.promoter_name || "Organizer Name" %>
             </div>
           </h2>
         </div>
