--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -99,7 +99,7 @@
             <table class="table table-striped">
                 <thead>
                   <tr>
-                    <th>Promoter</th>
+                    <th>Organizer</th>
                     <th>Sent</th>
                     <th>Status</th>
                   </tr>
@@ -122,7 +122,7 @@
 						<table class="table table-striped">
 	              <thead>
 	                <tr>
-	                  <th>Promoter</th>
+	                  <th>Organizer</th>
 	                  <th>Event</th>
 	                  <th>Status</th>
                     <th>Purchased on</th>
