--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -15,7 +15,7 @@
 }
 
 .section-box .label-box {
-  // content: "Promoter Info";
+  // content: "Organizer Info";
   position: absolute;
   top: -1px;
   left: -1px;
