--- a/app/views/promoter/events/index.html.erb
+++ b/app/views/promoter/events/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="span4">
       <ul class="breadcrumb">
-        <li><i class="icon-home"></i> <%= link_to "Promoter Home", promoter_root_path %><span class="divider">/</span></li>
+        <li><i class="icon-home"></i> <%= link_to "Organizer Home", promoter_root_path %><span class="divider">/</span></li>
         <li><a href="" class="active">All Events</a></li>
       </ul>
     </div>
