--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="span12">
     <ul class="breadcrumb">
-      <li><i class="icon-home"></i> <%= link_to "Promoter Home", promoter_root_path %><span class="divider">/</span></li>
+      <li><i class="icon-home"></i> <%= link_to "Organizer Home", promoter_root_path %><span class="divider">/</span></li>
       <li><%= link_to "All Events", promoter_events_path %><span class="divider">/</span></li>
       <li><a href="" class="active">Event Orders</a></li>
       <li></li>
