--- a/app/views/promoter/profiles/index.html.erb
+++ b/app/views/promoter/profiles/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="span12">
       <div class="page-header">
-        <h3>Promoter Listing</h3>
+        <h3>Organizer Listing</h3>
       </div>
     </div>
   </div>
